# LangChainExplorations

./: README.md  pyproject.toml
src/1_pycode_gen/: main.py
src/2_terminal_chat/: main.py  messages.json
src/3_text_embeddings/: main.py
